2015-10-21 Albert Chu <chu11@llnl.gov>

	* Various minor bug fixes, cleanup, and distcheck fixes.
	
2015-10-20 Albert Chu <chu11@llnl.gov>

	Re-org of OEM code for future.

	* libfreeipmi/include/freeipmi/sdr/,
	libfreeipmi/include/freeipmi/record-format: Split OEM .h files
	into vendor specific files.

	* libfreeipmi/sdr, libfreeipmi/record-format: Split OEM files into
	specific vendor files.

	* ipmi-sensors/: Split OEM files into motherboard files.

	* libfreeipmi/sel: Split OEM files into motherboard files.

2015-10-19 Albert Chu <chu11@llnl.gov>

	Re-org of OEM code for future.

	* libfreeipmi/include/freeipmi/spec/: Split OEM .h files into vendor specific files. 

	* libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-spec.c:
	Split OEM files into specific vendor files.
	
2015-10-19 Albert Chu <chu11@llnl.gov>

	Merge branch intelnm30

	* libfreeipmi/include/freeipmi/spec/ipmi-sensor-and-event-code-tables-oem-spec.h,
	libfreeipmi/sel/ipmi-sel-string-intel-node-manager.c: Support
	Intel NM 3.0 SEL events.

	* libfreeipmi/include/freeipmi/spec/ipmi-sensor-numbers-oem-spec.h:
	Add new sensor numbers.

	* libfreeipmi/include/freeipmi/cmds/ipmi-oem-intel-node-manager-cmds.h,
	libfreeipmi/include/freeipmi/api/ipmi-oem-intel-node-manager-api.h
	* libfreeipmi/cmds/ipmi-oem-intel-node-manager-cmds.c,
	libfreeipmi/api/ipmi-oem-intel-node-manager-api.c,
	ipmi-oem/ipmi-oem-intelnm.c: Update for Intel NM 3.0 changes.
	
2015-10-16 Albert Chu <chu11@llnl.gov>

	* ipmi-oem/ipmi-oem-intelnm.c (ipmi_oem_intelnm_get_node_manager_statistics):
	Fix errors in units in output.

	* ipmi-oem/ipmi-oem-intelnm.c (ipmi_oem_intelnm_set_node_manager_policy):
	Fix error in setting logic.

	* libfreeipmi/include/freeipmi/api/ipmi-oem-intel-node-manager-cmds-api.h,
	ipmi_cmd_oem_intel_node_manager_set_node_manager_policy_boot_time_policy (ipmi_cmd_oem_intel_node_manager_set_node_manager_policy_boot_time_policy):
	New function.
